# etl-cli-framework

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
config/: pipeline.yaml  schema.json
src/etl/: cli.py  config_loader.py
src/etl/reader/: api_reader.py  base.py  csv_reader.py  factory.py
src/etl/validator/: schema_validator.py
src/etl_cli_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli.py  test_config_loader.py  test_csv_reader.py  test_schema_validator.py
